UPDATED: refactored code.